[project]
name = "project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "evaluate",
    "huggingface-hub>=0.36.0",
    "jiwer",
    "moondream==0.0.5",
    "numpy>=2.3.5",
    "pillow==10.4.0",
    "psutil",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
    "wandb>=0.23.0",
]
